# literate-binary

./: CHANGES.md  LICENSE  README.md  cabal.project.freeze  literate-binary.cabal  stack.yaml
.github/workflows/: build.yml
app/: Main.hs
examples/: README.md  bitmap.md  minimal.bmp.md  minimal.zip.md  multiple-channel-wave.md  wave-with-xmp-metadata.md  wave.md  zip-with-data-descriptor.md  zip.md  zip64.md
examples/tiff/: README.md  bilevel-tiff.md  grayscale-tiff.md  palette-tiff.md  rgb-tiff.md  tiff-with-duplicate-pointer-error-1.md  tiff-with-duplicate-pointer-error-2.md  tiff-with-xmp-metadata.md
examples/tiff/jhove/: README.md  tiff-hul-26.md  tiff-hul-27.md  tiff-hul-3.md  tiff-hul-60.md  tiff-hul-7.md  tiff-hul-8.md
examples/wave/: README.md  broadcast-wave.md  wave.md
examples/zip/: README.md  empty-zip.md  zip-with-data-descriptor.md  zip.md  zip64.md
lib/: LiterateBinary.hs
lib/LiterateBinary/: Eval.hs  HexTree.hs  Parse.hs
src/: LiterateBinary.hs  Main.hs
src/Data/ByteString/: Enumeration.hs
src/LiterateBinary/: Eval.hs  HexTree.hs  Macro.hs  Parse.hs
test/: Spec.hs
