name:                literate-binary
version:             1.3.1
synopsis:            Integrate handcrafted binary and documentation
homepage:            https://github.com/marhop/literate-binary
license:             MIT
license-file:        LICENSE
author:              Martin Hoppenheit
maintainer:          martin@hoppenheit.info
copyright:           2018-2020 Martin Hoppenheit
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable lb
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Data.ByteString.Enumeration
                     , LiterateBinary
                     , LiterateBinary.Eval
                     , LiterateBinary.HexTree
                     , LiterateBinary.Parse
  build-depends:       base == 4.12.0.0
                     , base16-bytestring == 0.1.1.6
                     , bytestring == 0.10.8.2
                     , cmark == 0.6
                     , containers == 0.6.0.1
                     , mtl == 2.2.2
                     , optparse-applicative == 0.14.3.0
                     , parsec == 3.1.14.0
                     , random == 1.1
                     , string-conversions == 0.4.0.1
                     , text == 1.2.3.1
                     , utf8-string == 1.0.1.1
