name:                literate-binary
version:             1.3.1
synopsis:            Integrate handcrafted binary and documentation
homepage:            https://github.com/marhop/literate-binary
license:             MIT
license-file:        LICENSE
author:              Martin Hoppenheit
maintainer:          martin@hoppenheit.info
copyright:           2018-2020 Martin Hoppenheit
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable lb
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Data.ByteString.Enumeration
                     , LiterateBinary
                     , LiterateBinary.Eval
                     , LiterateBinary.HexTree
                     , LiterateBinary.Parse
  build-depends:       base >= 4.12 && < 5
                     , base16-bytestring >= 1.0.0.0 && < 1.1
                     , bytestring >= 0.10.8.2 && < 0.12
                     , cmark >= 0.6 && < 0.7
                     , containers >= 0.6.0.1 && < 0.7
                     , mtl >= 2.2.2 && < 2.3
                     , optparse-applicative >= 0.14.3.0 && < 0.17
                     , parsec >= 3.1.14.0 && < 3.2
                     , random >= 1.1 && < 1.3
                     , string-conversions >= 0.4.0.1 && < 0.5
                     , text >= 1.2.3.1 && < 1.3
                     , utf8-string >= 1.0.1.1 && < 1.1
