cabal-version:      3.0
name:               literate-binary
version:            1.3.2
synopsis:           Integrate handcrafted binary and documentation
homepage:           https://github.com/marhop/literate-binary
license:            MIT
license-file:       LICENSE
author:             Martin Hoppenheit
maintainer:         martin@hoppenheit.info
copyright:          2018-2022 Martin Hoppenheit
extra-source-files: README.md CHANGES.md

source-repository head
  type:             git
  location:         https://github.com/marhop/literate-binary

common dependencies
  build-depends:    base >= 4.12 && < 5,
                    base16 >= 1.0 && < 1.1,
                    bytestring >= 0.10.8.2 && < 0.13,
                    cmark >= 0.6 && < 0.7,
                    containers >= 0.6.0.1 && < 0.7,
                    mtl >= 2.2.2 && < 2.4,
                    optparse-applicative >= 0.14.3.0 && < 0.19,
                    parsec >= 3.1.14.0 && < 3.2,
                    random >= 1.1 && < 1.3,
                    string-conversions >= 0.4.0.1 && < 0.5,
                    text >= 1.2.3.1 && < 2.2,
                    utf8-string >= 1.0.1.1 && < 1.1
  ghc-options:      -Wall
  default-language: Haskell2010

library
  import:           dependencies
  hs-source-dirs:   lib
  exposed-modules:  Data.ByteString.Enumeration
                    LiterateBinary
                    LiterateBinary.Eval
                    LiterateBinary.HexTree
                    LiterateBinary.Parse

executable lb
  import:           dependencies
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:    literate-binary

test-suite lb-test
  import:           dependencies
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:    hspec,
                    literate-binary
